--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
+    "style-loader": "^0.20.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
